--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     /* NAVBAR */
     nav {
-      background-color: #1a1a1a;
+      background-color: black;
       color: white;
       display: flex;
       justify-content: space-between;
@@ -28,8 +28,12 @@
     .logo {
       font-size: 1.8rem;
       font-weight: bold;
-      color: #6EC8CB;
+      color: #568BBD;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      
+    }
+    .logo span{
+      color: #6EC8CB;
     }
     .logo:hover {
   transform: scale(1.1);
@@ -65,16 +69,19 @@
   justify-content: center;
   padding: 100px 20px;
   background-attachment: fixed;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
     .hero h1 {
       font-size: 3rem;
       margin-bottom: 20px;
+      
     }
     .hero h2{
       font-size: 3.2rem;
       color: white;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
     .hero span{
       color: red;
@@ -90,7 +97,8 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
-      border-radius: 4px;
+      border-radius: 10px;
+      border: 2px solid black;
     }
 
     /* PRODUKTET */
@@ -172,6 +180,7 @@
     align-items: center;
     background-image: none;
     color: black;
+    background-color:lightblue;
   }
 
   .hero h1 {
@@ -272,7 +281,8 @@
 
   <!-- NAVBAR -->
   <nav>
-  <a href="index.html" class="logo">SharriTech</a>
+    <a href="index.html"><img src="images/LOGOSHARRI.png" width="150px" height="50px" alt=""></a>
+  <!-- <a href="index.html" class="logo">Sharri<span>Tech</span></a> -->
 
   
   <div class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</div>
