--- a/klima2.html
+++ b/klima2.html
@@ -268,7 +268,7 @@
   
   
   
-  <li>Garancioni: Vite</li>
+  <li>Garancioni: 2Vite</li>
   <li>Barkodi:8606019607104</li>
   <li>Cmimi: <span class="price">€610.00</span></li>
 </ul>
