--- a/klima3.html
+++ b/klima3.html
@@ -268,7 +268,7 @@
   
   
   
-  <li>Garancioni: Vite</li>
+  <li>Garancioni: 2Vite</li>
   <li>Barkodi:8806091958495</li>
   <li>Cmimi: <span class="price">€589.00</span></li>
 </ul>
