--- a/Frigorifer.html
+++ b/Frigorifer.html
@@ -8,7 +8,7 @@
         body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #6EC8CB;
     }
 
     /* NAVBAR */
@@ -66,15 +66,18 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 40px;
+      
     }
 
     .product {
   background-color: #f9f9f9;
+  border: 2px solid black;
   padding: 25px;
   border-radius: 8px;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 
 .product:hover {
   transform: scale(1.05);
