--- a/klima4.html
+++ b/klima4.html
@@ -268,7 +268,7 @@
   
   
   
-  <li>Garancioni: Vite</li>
+  <li>Garancioni: 2Vite</li>
   <li>Barkodi:3856005184279</li>
   <li>Cmimi: <span class="price">€599.00</span></li>
 </ul>
