--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
     .hero h1 {
       font-size: 3rem;
       margin-bottom: 20px;
-      
     }
     .hero h2{
       font-size: 3.2rem;
@@ -105,6 +104,7 @@
     .products {
       padding: 60px 40px;
       text-align: center;
+      background-color: #6EC8CB;
     }
     .products a{
         text-decoration: none;
@@ -127,6 +127,8 @@
   border-radius: 8px;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border: 2px solid black;
+  
 }
 
 .product:hover {
@@ -274,7 +276,7 @@
   }
 }
 
-
+  
   </style>
 </head>
 <body>
