--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     /* HERO SECTION */
     .hero {
-  background-image: url('images/logo3.png');
+  background-image: url('images/logo4.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -98,7 +98,11 @@
       font-weight: bold;
       border-radius: 10px;
       border: 2px solid black;
+      text-align: center;
+      width: 45%;
+      font-size: 18px;
     }
+
 
     /* PRODUKTET */
     .products {
@@ -276,7 +280,7 @@
   }
 }
 
-  
+
   </style>
 </head>
 <body>
@@ -286,7 +290,7 @@
     <a href="index.html"><img src="images/LOGOSHARRI.png" width="150px" height="50px" alt=""></a>
   <!-- <a href="index.html" class="logo">Sharri<span>Tech</span></a> -->
 
-  
+   
   <div class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</div>
 
   <!-- Nav links -->
@@ -308,10 +312,11 @@
 
   <!-- HERO -->
   <section class="hero">
+    <a href="kontakti.html">Na Vizito</a>
     <h1>Zgjedh Teknikën e Shtëpisë tënde</h1>
     <p>Frigoriferë, Lavatriçe, Furrat dhe më shumë – me çmimet më të mira</p>
     <h2>ZBRITJE <span>-5%</span></h2>
-    <a href="kontakti.html">Na Vizito</a>
+    
   </section>
 
   <!-- PRODUKTET -->
