--- a/kontakti.html
+++ b/kontakti.html
@@ -218,8 +218,8 @@
     <h2>Na Kontakto</h2>
     <div class="contact-info">
       <p><span class="label">Emri:</span>SharriCenter</p>
-      <p><span class="label">Email:</span>Sharri@gmail.com</p>
-      <p><span class="label">Numri i telefonit:</span> +383 45-000-000</p>
+      <p><span class="label">Email:</span>alberthyseni41@gmail.com</p>
+      <p><span class="label">Numri i telefonit:</span> +383 43-705-549</p>
       <p><span class="label">Adresa:</span>Rruga: Mentor Morina, Komoran</p>
       <p><span class="label">Orari i punës:</span> E Hënë - E Diel, 06:00 - 23:00</p>
     </div>
@@ -237,8 +237,8 @@
     <h2>Na Kontakto</h2>
     <div class="contact-info">
       <p><span class="label">Emri:</span>SharriCenter2</p>
-      <p><span class="label">Email:</span>Sharri@gmail.com</p>
-      <p><span class="label">Numri i telefonit:</span> +383 45-000-000</p>
+      <p><span class="label">Email:</span>alberthyseni41@gmail.com</p>
+      <p><span class="label">Numri i telefonit:</span> +383 43-705-549</p>
       <p><span class="label">Adresa:</span>Magjistralja Pejë-Prishtinë, Llapushnik</p>
       <p><span class="label">Orari i punës:</span> E Hënë - E Diel, 06:00 - 23:00</p>
     </div>
