--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
     <a href="mikroval.html">Mikrovalë</a>
     <a href="bojler.html">Bojler</a>
     <a href="klima.html">Klima</a>
+    <a href="telefon.html">Telefon/Tablet</a>
     
   </div>
 </nav>
