--- a/telefon.html
+++ b/telefon.html
@@ -70,11 +70,11 @@
 
     .product {
   background-color: #f9f9f9;
-  border: 2px solid black;
   padding: 25px;
   border-radius: 8px;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border: 2px solid black;
 }
 
 .product:hover {
@@ -215,11 +215,10 @@ del{
   color: red;
 }
     </style>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- NAVBAR -->
-   <nav>
+   <!-- NAVBAR -->
+  <nav>
   <a href="index.html"><img src="images/LOGOSHARRI.png" width="150px" height="50px" alt=""></a>
   <!-- <a href="index.html" class="logo">Sharri<span>Tech</span></a> -->
 
@@ -238,52 +237,36 @@ del{
     <a href="mikroval.html">Mikrovalë</a>
     <a href="bojler.html">Bojler</a>
     <a href="klima.html">Klima</a>
+    <a href="telefon.html">Telefon/Tablet</a>
     
   </div>
 </nav>
 
 <section class="products">
     <div class="product-grid">
-    <a href="bojler1.html">
+    <a href="telefon1.html">
       <div class="product">
-        <img src="images/bojler1.jpg" alt="bojler">
-        <h3>BOJLER ARISTON BLU1 R 80 H 2K 80L</h3>
-        <p>€169.00</p>
+        <img src="images/telefon1.jpg" alt="">
+        <h3>TELEFON SAMSUNG GALAXY A23 5G 64GB</h3>
+        <p>€280.00</p>
       </div>
     </a>
-    <a href="bojler2.html">
+    <a href="telefon2.html">
       <div class="product">
-        <img src="images/bojler2.jpg" alt="bojler">
-        <h3>BOJLER ARISTON BLU1 R 80 V2K 80L</h3>
-        <p>€140.00</p>
+        <img src="images/telefon2.png" alt="">
+        <h3>TELEFON SAMSUNG GALAXY A35 5G 128GB</h3>
+        <p>€345.00</p>
       </div>
     </a>
-    <a href="bojler3.html">
+    <a href="telefon3.html">
       <div class="product">
-        <img src="images/bojler3.png" alt="bojler">
-        <h3>BOJLER VIVAX HOME EWH-80VM 80L</h3>
-        <p>€115.00</p>
+        <img src="images/telefon3.jpg" alt="">
+        <h3>TELEFON SAMSUNG GALAXY A25 6G 128GB</h3>
+        <p>€330.00</p>
       </div>
     </a>
-    <a href="bojler4.html">
-      <div class="product">
-        <img src="images/bojler4.jpeg" alt="bojler">
-        <h3>BOJLER ARISTON ARISTON BLU1 100L</h3>
-        <p>€180.00</p>
-      </div>
-    </a>
-    <a href="bojler5.html">
-      <div class="product">
-        <img src="images/bojler5.jpg" alt="bojler">
-        <h3>BOJLER BLUE EVO ARISTON</h3>
-        <p>€90.00</p>
-      </div>
-    </a>
-     </div>
+    </div>
   </section>
-
-
-
 
 
 <script>
