--- a/Shporetelektrik.html
+++ b/Shporetelektrik.html
@@ -158,23 +158,23 @@
     </a>
     <a href="furra12.html">
       <div class="product">
-        <img src="images/" alt="">
-        <h3>FURRË MONTUESE </h3>
-        <p>€.00</p>
+        <img src="images/furra12.webp" alt="">
+        <h3>FURRË MONTUESE VIVAX BO-606FAHTM X</h3>
+        <p>€250.00</p>
       </div>
     </a>
     <a href="furra13.html">
       <div class="product">
-        <img src="images/" alt="">
-        <h3>FURRË MONTUESE </h3>
-        <p>€.00</p>
+        <img src="images/furra12.webp" alt="">
+        <h3>FURRË MONTUESE CANDY FET629XL</h3>
+        <p>€250.00</p>
       </div>
     </a>
     <a href="furra14.html">
       <div class="product">
-        <img src="images/" alt="">
-        <h3>FURRË MONTUESE </h3>
-        <p>€.00</p>
+        <img src="images/furra14.png" alt="">
+        <h3>FURRË MONTUESE VIVAX BO-658FXHTD X</h3>
+        <p>€230.00</p>
       </div>
     </a>
     <a href="furra15.html">
