--- a/bojler.html
+++ b/bojler.html
@@ -61,7 +61,7 @@
     <a href="bojler4.html">
       <div class="product">
         <img src="images/bojler4.jpeg" alt="bojler">
-        <h3>BOJLER ARISTON ARISTON BLU1 100L</h3>
+        <h3>BOJLER ARISTON BLU1 100L</h3>
         <p>€180.00</p>
       </div>
     </a>
