--- a/bojler4.html
+++ b/bojler4.html
@@ -39,11 +39,11 @@
     <img src="images/bojler4.jpeg" alt="TV Image">
   </div>
   <div class="product-info">
-    <h2>BOJLER ARISTON ARISTON BLU1 100L</h2>
+    <h2>BOJLER ARISTON BLU1 100L</h2>
     <ul>
   
   
-  <li>Garancioni: Vite</li>
+  <li>Garancioni: 3Vite</li>
   <li>Barkodi:5414849737131</li>
   <li>Cmimi: <span class="price">€180.00</span></li>
 </ul>
