--- a/furra12.html
+++ b/furra12.html
@@ -36,16 +36,16 @@
 </nav>
     <div class="product-detail">
   <div class="product-image">
-    <img src="images/" alt="">
+    <img src="images/furra12.webp" alt="">
   </div>
   <div class="product-info">
-    <h2>FURRË MONTUESE </h2>
+    <h2>FURRË MONTUESE VIVAX BO-606FAHTM X</h2>
     <ul>
   
   
-  <li>Garancioni: 2Vite</li>
-  <li>Barkodi:</li>
-  <li>Cmimi: <span class="price">€.00</span></li>
+  <li>Garancioni: 5Vite</li>
+  <li>Barkodi:3856005156525</li>
+  <li>Cmimi: <span class="price">€250.00</span></li>
 </ul>
     <!-- <a href="#" class="buy-btn">Buy Now</a> -->
   </div>
