--- a/furra13.html
+++ b/furra13.html
@@ -36,16 +36,16 @@
 </nav>
     <div class="product-detail">
   <div class="product-image">
-    <img src="images/" alt="">
+    <img src="images/furra13.jpg" alt="">
   </div>
   <div class="product-info">
-    <h2>FURRË MONTUESE </h2>
+    <h2>FURRË MONTUESE CANDY FET629XL</h2>
     <ul>
   
   
   <li>Garancioni: 2Vite</li>
-  <li>Barkodi:</li>
-  <li>Cmimi: <span class="price">€.00</span></li>
+  <li>Barkodi:8016361678914</li>
+  <li>Cmimi: <span class="price">€250.00</span></li>
 </ul>
     <!-- <a href="#" class="buy-btn">Buy Now</a> -->
   </div>
