--- a/lavatriqe.html
+++ b/lavatriqe.html
@@ -40,7 +40,7 @@
     <a href="lavatriqe1.html">
       <div class="product">
         <img src="images/lavatriqe1.png" alt="lavatriqe">
-        <h3>RROBATHARËSE CDR-0812A 8KG</h3>
+        <h3>RROBATHARËSE VIVAX CDR-0812A 8KG</h3>
         <p>€280.00</p>
       </div>
     </a>
