--- a/lavatriqe1.html
+++ b/lavatriqe1.html
@@ -39,7 +39,7 @@
     <img src="images/lavatriqe1.png" alt="TV Image">
   </div>
   <div class="product-info">
-    <h2>RROBATHARËSE CDR-0812A 8KG</h2>
+    <h2>RROBATHARËSE VIVAX CDR-0812A 8KG</h2>
     <ul>
   
   
