--- a/lavatriqe18.html
+++ b/lavatriqe18.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147609798</li>
   <li>Cmimi: <span class="price">€379.00</span></li>
 </ul>
