--- a/lavatriqe20.html
+++ b/lavatriqe20.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147610084</li>
   <li>Cmimi: <span class="price">€480.00</span></li>
 </ul>
