--- a/lavatriqe25.html
+++ b/lavatriqe25.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147614389</li>
   <li>Cmimi: <span class="price">€429.99</span></li>
 </ul>
