--- a/lavatriqe33.html
+++ b/lavatriqe33.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8690842711466</li>
   <li>Cmimi: <span class="price">€285.00</span></li>
 </ul>
