--- a/lavatriqe39.html
+++ b/lavatriqe39.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 5Vite</li>
+  <li>Garancioni: </li>
   <li>Barkodi:800040</li>
   <li>Cmimi: <span class="price">€245.00</span></li>
 </ul>
