--- a/lavatriqe5.html
+++ b/lavatriqe5.html
@@ -36,7 +36,7 @@
 </nav>
     <div class="product-detail">
   <div class="product-image">
-    <img src="images/" alt="TV Image">
+    <img src="images/lavatriqe5.jpg" alt="TV Image">
   </div>
   <div class="product-info">
     <h2>RROBALARËSE SAMSUNG WW90T4020EE1 9KG</h2>
