--- a/mikroval.html
+++ b/mikroval.html
@@ -89,7 +89,7 @@
     <a href="mikroval8.html">
       <div class="product">
         <img src="images/mikro8.webp" alt="bojler">
-        <h3>MIKROVALË MD20B</h3>
+        <h3>MIKROVALË MIDEA MD20B</h3>
         <p>€105.00</p>
       </div>
     </a>
