--- a/telefon.html
+++ b/telefon.html
@@ -119,10 +119,10 @@
 
     </div>
   </section>
-  <div>
+  <!-- <div>
     <h2>KUFJE</h2>
-  </div>
-  <section class="products">
+  </div> -->
+  <!-- <section class="products">
     <div class="product-grid">
     <a href="kufje1.html">
       <div class="product">
@@ -130,7 +130,7 @@
         <h3>KUFJE TWS</h3>
         <p>€35.00</p>
       </div>
-   
+   </a> -->
     
 
     </div>
