--- a/lavatriqe14.html
+++ b/lavatriqe14.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147669450</li>
   <li>Cmimi: <span class="price">€400.00</span></li>
 </ul>
