--- a/lavatriqe16.html
+++ b/lavatriqe16.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147673126</li>
   <li>Cmimi: <span class="price">€365.00</span></li>
 </ul>
