--- a/lavatriqe19.html
+++ b/lavatriqe19.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147619308</li>
   <li>Cmimi: <span class="price">€590.00</span></li>
 </ul>
