--- a/lavatriqe24.html
+++ b/lavatriqe24.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147619773</li>
   <li>Cmimi: <span class="price">€299.00</span></li>
 </ul>
