--- a/lavatriqe30.html
+++ b/lavatriqe30.html
@@ -44,7 +44,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8050147624432</li>
   <li>Cmimi: <span class="price">€289.00</span></li>
 </ul>
