--- a/lavatriqe34.html
+++ b/lavatriqe34.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:8690842711589</li>
   <li>Cmimi: <span class="price">€340.00</span></li>
 </ul>
