--- a/lavatriqe37.html
+++ b/lavatriqe37.html
@@ -45,7 +45,7 @@
   
   
   
-  <li>Garancioni: 2Vite</li>
+  <li>Garancioni: 3+2Vite</li>
   <li>Barkodi:000493</li>
   <li>Cmimi: <span class="price">€425.00</span></li>
 </ul>
