--- a/mikroval8.html
+++ b/mikroval8.html
@@ -40,7 +40,7 @@
     <img src="images/mikro8.webp" alt="TV Image">
   </div>
   <div class="product-info">
-    <h2>MIKROVALË MD20B</h2>
+    <h2>MIKROVALË MIDEA MD20B</h2>
     <ul>
   
   
