--- a/kontakti.html
+++ b/kontakti.html
@@ -229,7 +229,7 @@
     <h2>Na Kontakto</h2>
     <div class="contact-info">
       <p><span class="label">Emri:</span>SharriCenter</p>
-      <p><span class="label">Email:</span>alberthyseni41@gmail.com</p>
+      <p><span class="label">Email:</span>shcshpk@gmail.com</p>
       <p><span class="label">Numri i telefonit:</span> +383 43-705-549</p>
       <p><span class="label">Adresa:</span>Rruga: Mentor Morina, Komoran</p>
       <p><span class="label">Orari i punës:</span> E Hënë - E Diel, 06:00 - 23:00</p>
@@ -248,7 +248,7 @@
     <h2>Na Kontakto</h2>
     <div class="contact-info">
       <p><span class="label">Emri:</span>SharriCenter2</p>
-      <p><span class="label">Email:</span>alberthyseni41@gmail.com</p>
+      <p><span class="label">Email:</span>shcshpk@gmail.com</p>
       <p><span class="label">Numri i telefonit:</span> +383 43-705-549</p>
       <p><span class="label">Adresa:</span>Magjistralja Pejë-Prishtinë, Llapushnik</p>
       <p><span class="label">Orari i punës:</span> E Hënë - E Diel, 06:00 - 23:00</p>
